Updated auth server url

--- a/things_2.yml
+++ b/things_2.yml
@@ -8119,6 +8119,7 @@ components:
       flows:
         clientCredentials:
           tokenUrl: 'https://access.bosch-iot-suit.com/v2/token'
+          authorizationUrl: "https://access.bosch-iot-suit.com/v2/token"
           scopes: {}
     basicAuth:
       type: http
